# glovebox

./: .gitignore  AGENTS.md  BRIEF.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Justfile  TEST_PLAN.md  manifest  rustfmt.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/skills/new-e2e-test/: SKILL.md
.claude/skills/new-entity/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.claude/skills/preflight/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-01-puby-workspace-split.md  (+7 more)
frontend/: index.html  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: builds.spec.ts  chat.spec.ts  dashboard.spec.ts  documents.spec.ts  garage.spec.ts  helpers.ts  incidents.spec.ts  invoice-parse.spec.ts  navigation.spec.ts  observations.spec.ts  parts.spec.ts  plan.spec.ts  records.spec.ts  research.spec.ts  spa-fallback.spec.ts  suggestions.spec.ts  timeline.spec.ts  vehicle-detail.spec.ts  vehicle-new.spec.ts
frontend/src/: App.svelte  main.ts
glovebox-backend/: Cargo.toml
glovebox-backend/src/: main.rs
glovebox-backend/src/api/: accidents.rs  ai.rs  budget.rs  builds.rs  conversations.rs  costs.rs  dashboard.rs  documents.rs  error.rs  export.rs  incidents.rs  mileage.rs  mod.rs  model_templates.rs  observations.rs  part_slots.rs  parts.rs  plan.rs  platforms.rs  reminders.rs  research.rs  schedules.rs  search.rs  services.rs  shops.rs  vehicles.rs  vin.rs
glovebox-mcp/: Cargo.toml
glovebox-mcp/src/: handler.rs  lib.rs  schemas.rs
glovebox-mcp/tests/: mcp_integration_test.rs
glovebox-shared/: Cargo.toml
glovebox-shared/src/: config.rs  error.rs  lib.rs  test_support.rs
glovebox-shared/src/entities/: accident_correspondence.rs  ai_provider_config.rs  build.rs  chat_message.rs  document.rs  incident.rs  incident_followup.rs  incident_service_link.rs  maintenance_schedule_item.rs  mileage_log.rs  mod.rs  observation.rs  part.rs  part_slot.rs  platform.rs  research_finding.rs  research_report.rs  service_record.rs  service_schedule_link.rs  shop.rs  vehicle.rs  visit.rs  work_item.rs
glovebox-shared/src/inputs/: accident.rs  ai_provider.rs  build.rs  document.rs  incident.rs  mileage.rs  mod.rs  model_template.rs  observation.rs  part.rs  part_slot.rs  platform.rs  research.rs  schedule.rs  service_record.rs  shop.rs  vehicle.rs  visit.rs  work_item.rs
glovebox-shared/src/migration/: m20260301_000001_create_core_tables.rs  m20260301_000003_create_service_tables.rs  m20260301_000004_create_tracking_tables.rs  m20260301_000005_create_accident_tables.rs  m20260301_000006_create_parts_tables.rs  m20260301_000007_create_research_and_ai_tables.rs  m20260301_000010_add_conversations.rs  m20260301_000011_create_service_record_line_items.rs  m20260301_000013_add_fts5_search.rs  m20260301_000014_add_builds.rs  m20260301_000015_drop_ai_tables.rs  m20260301_000016_drop_part_slots.rs  m20260301_000017_add_service_payer.rs  m20260301_000018_unify_incidents.rs  m20260301_000019_mileage_service_fk.rs  m20260301_000020_planning.rs  m20260301_000021_fts_planning.rs  m20260301_000022_import_idempotency.rs  mod.rs
glovebox-shared/src/services/: accident.rs  activity.rs  ai_ops.rs  budget.rs  build.rs  conversation.rs  costs.rs  dashboard.rs  document.rs  export.rs  incident.rs  mileage.rs  mod.rs  model_template.rs  nhtsa.rs  observation.rs  part.rs  part_slot.rs  platform.rs  reminders.rs  research.rs  schedule.rs  search.rs  service_record.rs  shop.rs  vehicle.rs  vin_decode.rs  visit.rs  work_item.rs
glovebox-shared/src/services/ai/: claude.rs  context.rs  mod.rs
scripts/: check-layering.sh
src/: config.rs  main.rs
src/api/: accidents.rs  ai.rs  conversations.rs  costs.rs  documents.rs  error.rs  export.rs  mileage.rs  mod.rs  model_templates.rs  observations.rs  part_slots.rs  parts.rs  platforms.rs  reminders.rs  research.rs  schedules.rs  serde_helpers.rs  services.rs  settings.rs  shops.rs  vehicles.rs  vin.rs
src/entities/: accident.rs  accident_service_link.rs  chat_message.rs  conversation.rs  maintenance_schedule_item.rs  mod.rs  model_template.rs  part.rs  service_record.rs  service_record_line_item.rs  settings.rs  vehicle.rs  vehicle_attribute.rs
src/migration/: m20260301_000001_create_core_tables.rs  m20260301_000001_create_platforms.rs  m20260301_000002_create_maintenance_tables.rs  m20260301_000002_create_model_templates.rs  m20260301_000003_create_service_tables.rs  m20260301_000003_create_vehicles.rs  m20260301_000004_create_tracking_tables.rs  m20260301_000004_create_vehicle_attributes.rs  m20260301_000005_create_accident_tables.rs  m20260301_000005_create_mileage_log.rs  m20260301_000006_create_maintenance_schedule_items.rs  m20260301_000006_create_parts_tables.rs  m20260301_000007_create_research_and_ai_tables.rs  m20260301_000007_create_service_records.rs  m20260301_000008_create_service_schedule_links.rs  m20260301_000008_seed_vw_mqb_data.rs  m20260301_000009_add_part_urls.rs  m20260301_000009_create_settings.rs  m20260301_000010_add_schedule_item_fields.rs  m20260301_000011_create_service_record_line_items.rs  m20260301_000011_seed_vw_mqb_data.rs  m20260301_000012_add_vehicle_archived_at.rs  m20260301_000012_create_shops.rs  m20260301_000013_create_observations.rs  m20260301_000014_create_documents.rs  m20260301_000015_create_accidents.rs  m20260301_000016_create_parts.rs  m20260301_000017_create_chat_messages.rs  m20260301_000018_create_research.rs  m20260301_000019_create_ai_providers.rs  mod.rs
src/services/: mod.rs  nhtsa.rs  reminders.rs  vin_decode.rs
(+51 files in other folders)
