[workspace]
resolver = "3"
members = ["glovebox-shared", "glovebox-backend", "glovebox-mcp"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusty-money = { version = "0.4", features = ["iso"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["sqlite"], default-features = false }
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
