[package]
name = "glovebox-shared"
edition.workspace = true
version.workspace = true

[lib]
name = "glovebox_shared"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
rusty-money.workspace = true
async-trait.workspace = true
base64.workspace = true
sqlx.workspace = true
tracing.workspace = true
