[package]
name = "glovebox-shared"
edition.workspace = true
version.workspace = true

[lib]
name = "glovebox_shared"
path = "src/lib.rs"

[features]
# Exposes `test_support` (in-memory migrated DB) to sibling crates' tests.
# Enable only as a dev-dependency feature; never from a normal dependency.
test-support = []

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
rusty-money.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
